# bugs-life

./: .gitignore  Board.cpp  Board.h  CMakeLists.txt  Crawler.cpp  Crawler.h  crawler-bugs.txt  main.cpp
include/: Board.h  Bug.h  Crawler.h  Hopper.h
include/utils/: Direction.h  Position.h
src/: Board.cpp  Bug.cpp  Crawler.cpp  Hopper.cpp  main.cpp
src/model/: Bishop.cpp  Bishop.h  Board.cpp  Board.h  Bug.cpp  Bug.h  Crawler.cpp  Crawler.h  Hopper.cpp  Hopper.h  Superbug.cpp  Superbug.h
